Add publication details for new paper

--- a/assets/pages/publication.html
+++ b/assets/pages/publication.html
@@ -485,6 +485,17 @@
 
       </tr>
 
+      <tr>
+        <td style="padding:0px;width:65%;vertical-align:middle;text-align:justify">
+          <papertitle><b>Beyond VLM-Based Rewards: Diffusion-Native Latent Reward Modeling</b></papertitle>,
+          <br>Gongye Liu, Bo Yang, Yida Zhi, Zhizhou Zhong, Lei Ke, Didan Deng, Han Gao, Yongxiang Huang, Kaihao Zhang, Hongbo Fu, Wenhan Luo,<br>
+          <i>arXiv:2602.11146.</i>
+          <br>
+          [<a href="https://arxiv.org/abs/2602.11146" target="_blank">arXiv</a>]
+          [<a href="https://github.com/HKUST-C4G/diffusion-rm/" target="_blank">Code</a>]
+          <p></p>
+        </td>
+      </tr>
 
       <tr>
         <td style="padding:0px;width:65%;vertical-align:middle;text-align:justify">
