--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C4 Group @ HKUST</title>
+    <title>YU-Vision-Group @ GBU</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
@@ -120,9 +120,6 @@
 
         <!-- People Module -->
         <div id="people-container"></div>
-
-        <!-- Sponsors Module -->
-        <div id="sponsors-container"></div>
     </main>
 
     <!-- Footer Container -->
